@@ -1,17 +1,5 @@
 package ca.ubc.ece.resess.slicer.dynamic.core.controldependence;
 
-import ca.ubc.ece.resess.slicer.dynamic.core.graph.DynamicControlFlowGraph;
-import ca.ubc.ece.resess.slicer.dynamic.core.statements.StatementInstance;
-import ca.ubc.ece.resess.slicer.dynamic.core.statements.StatementMap;
-import ca.ubc.ece.resess.slicer.dynamic.core.utils.AnalysisLogger;
-import soot.SootMethod;
-import soot.Unit;
-import soot.jimple.GotoStmt;
-import soot.toolkits.graph.pdg.EnhancedUnitGraph;
-import soot.toolkits.graph.pdg.HashMutablePDG;
-import soot.toolkits.graph.pdg.PDGNode;
-import soot.toolkits.graph.pdg.PDGRegion;
-
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
@@ -20,6 +8,17 @@ import java.util.Map;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
+import ca.ubc.ece.resess.slicer.dynamic.core.graph.DynamicControlFlowGraph;
+import ca.ubc.ece.resess.slicer.dynamic.core.statements.StatementInstance;
+import ca.ubc.ece.resess.slicer.dynamic.core.statements.StatementMap;
+import ca.ubc.ece.resess.slicer.dynamic.core.utils.AnalysisLogger;
+import soot.SootMethod;
+import soot.Unit;
+import soot.jimple.GotoStmt;
+import soot.toolkits.graph.pdg.EnhancedUnitGraph;
+import soot.toolkits.graph.pdg.Region;
+import soot.toolkits.graph.pdg.RegionAnalysis;
 
 
 public class ControlDominator {
@@ -37,12 +36,11 @@ public class ControlDominator {
         return Integer.parseInt(matcher.group());
     }
 
-    public static StatementInstance getControlDominator(StatementInstance stmt, StatementMap chunk, DynamicControlFlowGraph icdg) {
-        StatementInstance candidateIu = null;
+    public static StatementInstance getControlDominator(StatementInstance stmt, StatementMap chunk, DynamicControlFlowGraph dcfg) {
         if (outOfMemMethods.contains(stmt.getMethod())) {
-            return candidateIu;
+            return null;
         }
-        ControlDomRunner cdr = new ControlDomRunner(stmt, chunk, icdg, candidateIu);
+        ControlDomRunner cdr = new ControlDomRunner(stmt, chunk, dcfg);
         Thread t = new Thread(cdr);
         try {
             t.start();
@@ -51,28 +49,25 @@ public class ControlDominator {
         } catch (InterruptedException e) {
             // pass
         }
-        candidateIu = cdr.getCandidateIu();
-        // candidateIu = getControlDom(stmt, chunk, icdg, candidateIu);
-        return candidateIu;
+        return cdr.getCandidateIu();
     }
 
 
     static class ControlDomRunner implements Runnable {
-        final StatementInstance stmt;
-        final StatementMap chunk;
-        final DynamicControlFlowGraph icdg;
-        StatementInstance candidateIu;
+        private final StatementInstance stmt;
+        private final StatementMap chunk;
+        private final DynamicControlFlowGraph dcfg;
+        private StatementInstance candidateIu;
 
-        ControlDomRunner(StatementInstance stmt, StatementMap chunk, DynamicControlFlowGraph icdg, StatementInstance candidateIu) {
+        ControlDomRunner(StatementInstance stmt, StatementMap chunk, DynamicControlFlowGraph dcfg) {
             this.stmt = stmt;
             this.chunk = chunk;
-            this.icdg = icdg;
-            this.candidateIu = candidateIu;
+            this.dcfg = dcfg;
         }
 
         @Override
         public void run() {
-            this.candidateIu = getControlDom(stmt, chunk, icdg, candidateIu);
+            this.candidateIu = getControlDom(stmt, chunk, dcfg);
         }
 
         public StatementInstance getCandidateIu() {
@@ -81,7 +76,8 @@ public class ControlDominator {
     }
 
 
-    private static StatementInstance getControlDom(StatementInstance stmt, StatementMap chunk, DynamicControlFlowGraph icdg, StatementInstance candidateIu) {
+    private static StatementInstance getControlDom(StatementInstance stmt, StatementMap chunk, DynamicControlFlowGraph icdg) {
+        StatementInstance candidateIu = null;
         try {
             EnhancedUnitGraph cug;
             if (computedGraphs.containsKey(stmt.getMethod())) {
@@ -91,53 +87,49 @@ public class ControlDominator {
                 computedGraphs.put(stmt.getMethod(), cug);
             }
 
-            HashMutablePDG pdg = new HashMutablePDG(cug);
-            for (PDGRegion r : pdg.getPDGRegions()) {
-                PDGNode p = r.getCorrespondingPDGNode();
+            // AnalysisLogger.warn(true, "Graph: {}", cug);
+            // HashMutablePDG pdg = new HashMutablePDG(new ExceptionalUnitGraph(stmt.getMethod().getActiveBody()));
+            RegionAnalysis ra = new RegionAnalysis(cug, stmt.getMethod(), stmt.getMethod().getDeclaringClass());
+            for (Region r : ra.getRegions()) {
                 List<Unit> regionUnits = r.getUnits();
                 if (regionUnits.contains(stmt.getUnit())) {
                     if (regionUnits.toString().contains(":= @caughtexception") || regionUnits.toString().contains("goto [?= throw")) {
                         candidateIu = lineBeforeException(icdg, regionUnits, stmt);
                     } else {
-                        candidateIu = matchControlDom(stmt, chunk, pdg, candidateIu, p);
+                        candidateIu = matchControlDom(stmt, chunk, cug, ra.getRegions(), r);
                     }
                 }
             }
         } catch (OutOfMemoryError e1) {
-            AnalysisLogger.warn(true, "Could not compute control dom");
+            AnalysisLogger.warn(true, "Could not compute control dom due to OutOfMemoryError");
             outOfMemMethods.add(stmt.getMethod());
         } catch (Exception e2) {
-            AnalysisLogger.warn(true, "Could not compute control dom");
+            AnalysisLogger.warn(true, "Could not compute control dom due to exception: {}", e2);
         }
         return candidateIu;
     }
 
 
-    private static StatementInstance matchControlDom(StatementInstance stmt, StatementMap chunk,
-                                                     HashMutablePDG pdg, StatementInstance candidateIu, PDGNode p) {
-        if (!pdg.getPredsOf(p).isEmpty()) {
-            String[] lines = pdg.getPredsOf(p).get(0).toString().split("\\r?\\n");
-            String conditionLine = lines[lines.length - 1];
-            if (conditionLine.endsWith(";")) {
-                conditionLine = conditionLine.substring(0, conditionLine.length() - 1);
-            }
-            candidateIu = compareUnits(stmt, chunk, candidateIu, conditionLine);
+    private static StatementInstance matchControlDom(StatementInstance stmt, StatementMap chunk, EnhancedUnitGraph methodGraph, List<Region> allRegions, Region region) {
+        StatementInstance candidateIu = null;
+        Unit first = region.getFirst();
+        List<Unit> preds = methodGraph.getPredsOf(first);
+        for (Unit pred : preds) {
+            candidateIu = compareUnits(stmt, chunk, pred);
         }
         return candidateIu;
     }
 
-
-    private static StatementInstance compareUnits(StatementInstance stmt, StatementMap chunk, StatementInstance candidateIu, String candidate) {
+    private static StatementInstance compareUnits(StatementInstance stmt, StatementMap chunk, Unit unit) {
         for (StatementInstance iu : chunk.values()) {
             if (iu.getLineNo() > stmt.getLineNo()) {
                 continue;
             }
-            if (iu.getUnit().toString().equals(candidate)) {
-                candidateIu = iu;
-                break;
+            if (iu.getUnit().equals(unit)) {
+                return iu;
             }
         }
-        return candidateIu;
+        return null;
     }
 
 
@@ -159,9 +151,7 @@ public class ControlDominator {
             if ((prev != null) && !((prev.getUnit()) instanceof GotoStmt)) {
                 if (mustFind.isEmpty()) {
                     return prev;
-                } else {
-                    mustFind.remove(prev.getUnit());
-                }
+                } else mustFind.remove(prev.getUnit());
             }
 
         }
